# kicad-svg-extras

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  __init__.py  __main__.py  dev-requirements.txt  pcb_net_filter.py  pyproject.toml  svg_generator.py  svg_processor.py
.claude/: CLAUDE.md  settings.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-demo.yml
demo/: demo.js  index.html  metadata.json
resources/: color-config-example.json
src/kicad_svg_extras/: __init__.py  __main__.py  colors.py  layers.py  logging.py  pcb_net_filter.py  pcbnew_discovery.py  pcbnew_utils.py  svg_generator.py  svg_processor.py
tests/: __init__.py  conftest.py  test_basic.py  test_colors.py  test_layers.py  test_svg_processor.py
tests/functional/: __init__.py  conftest.py  report.css  test_basic.py  test_svg_generation.py
tests/functional/data/: README.md
tests/functional/data/config_files/: advanced_nets.json  basic_colors.json
tests/functional/data/pcb_files/simple_2layer/: udb.kicad_pcb  udb.kicad_pro
tests/functional/data/pcb_files/very_simple_2layer/: udb.kicad_pcb
